# Timer-Python

./: .gitignore  README.md  linux_start_program.sh  pyproject.toml  requirements.txt  start_program.bat  windows_start_program.bat
data_program/: Инструкция.txt
programm/: class_timer.py  config.py  exception.py  function_diagram.py  function_files.py  function_timers.py  main.py  save_programm.py  text.py  times.py  utils.py
programm/diagram/: save_diagram.py  show_diagram.py  utils.py
programm/exception/: diagram_exception.py  json_exception.py
programm/save_file/: save_files.py  utils.py
programm/save_load_json/: load_programm.py  load_utils.py  save_programm.py  save_utils.py  utils.py
programm/timer/: class_timer.py  function_timers.py
programm/times/: times.py
save_programms/: main.json  save.json
