[tool.poetry]
name = "timer-python"
version = "1.0.0"
description = ""
authors = ["DarkPythons <author_email>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
